# k8s-autorightsizing

./: .editorconfig  .gitignore  README.md  deploy.sh  destroy.sh  validate.sh
.github/workflows/: apply-sample-apps.yml
k8s/cadvisor/: 5-service-monitor.yaml
k8s/grafana/: 0-service-account.yaml  1-secret.yaml  3-datasources.yaml  5-deployment.yaml
k8s/grafana/dashboards/: pod-rightsizing.yaml  resource-efficiency.yaml
k8s/prometheus-agent/: 0-service-account.yaml  3-additional-scrape-configs.yaml  4-prometheus.yaml
recommender/: Cargo.toml
recommender/src/: lib.rs  main.rs
recommender/src/lib/: aws_region.rs  cli.rs  config.rs  error.rs  kubernetes.rs  logger.rs  output.rs  prometheus.rs  recommender.rs  tui.rs  updater.rs
sample-apps/1-cpu-intensive/app/: Dockerfile  main.py
sample-apps/1-cpu-intensive/k8s/: configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
sample-apps/2-memory-intensive/app/: Dockerfile  main.py  requirements.txt
sample-apps/2-memory-intensive/k8s/: configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
sample-apps/3-variable-load/app/: main.py
sample-apps/3-variable-load/k8s/: configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
sample-apps/4-idle-app/app/: Dockerfile  main.py
sample-apps/4-idle-app/k8s/: configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
terraform/: .terraform.lock.hcl  ec2.tf  eks.tf  iam.tf  monitoring.tf  network.tf  outputs.tf  provider.tf
