[package]
name = "recommender"
version = "0.1.0"
edition = "2024"
authors = ["Ammar Farhan Mohamad Rizam <ammar_22006911@utp.edu.my>"]

[lib]
name = "recommender"
path = "src/lib.rs"

[[bin]]
name = "recommender"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.13"
aws-config = "1.8.10"
aws-credential-types = "1.2.9"
aws-sigv4 = "1.3.6"
aws-smithy-runtime-api = "1.9.2"
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = "2.0.1"
log = "0.4.28"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
